add list and user fragments

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="margin_layout">8dp</dimen>
+    <dimen name="nameTextSize">18dp</dimen>
+    <dimen name="emailTextSize">12dp</dimen>
 </resources>
