--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -1,30 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/item_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/backgroundItem"
+    android:layout_marginBottom="2dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
         android:id="@+id/tv_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:text="@string/token"
+        android:textColor="@color/nameColor"
+        android:textSize="@dimen/nameTextSize"
+        android:maxLines="2"
         android:layout_marginStart="@dimen/margin_layout"
         android:layout_marginTop="@dimen/margin_layout"
         android:layout_marginEnd="@dimen/margin_layout"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/iv_active"
+        app:layout_constraintEnd_toStartOf="@id/iv_active"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/tv_email"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:text="@string/token"
+        android:textColor="@color/emailColor"
+        android:textSize="@dimen/emailTextSize"
+        android:maxLines="2"
         android:layout_marginStart="@dimen/margin_layout"
         android:layout_marginEnd="@dimen/margin_layout"
         android:layout_marginTop="@dimen/margin_layout"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/iv_active"
-        app:layout_constraintTop_toBottomOf="@id/tv_name"/>
+        app:layout_constraintEnd_toStartOf="@id/iv_active"
+        app:layout_constraintTop_toBottomOf="@id/tv_name" />
 
     <ImageView
         android:id="@+id/iv_active"
