--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="backgroundFragment">#DDDDDD</color>
+    <color name="backgroundItem">#FFFFFF</color>
+    <color name="nameColor">#232323</color>
+    <color name="emailColor">#686767</color>
 </resources>
