--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -3,8 +3,9 @@
     android:id="@+id/item_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/backgroundItem"
-    android:layout_marginBottom="2dp"
+    android:background="@drawable/ripple"
+    android:elevation="@dimen/elevation"
+    android:layout_marginBottom="@dimen/margin_layout_rv"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
@@ -33,9 +34,11 @@
         android:layout_marginStart="@dimen/margin_layout"
         android:layout_marginEnd="@dimen/margin_layout"
         android:layout_marginTop="@dimen/margin_layout"
+        android:layout_marginBottom="@dimen/margin_layout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/iv_active"
-        app:layout_constraintTop_toBottomOf="@id/tv_name" />
+        app:layout_constraintTop_toBottomOf="@id/tv_name"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <ImageView
         android:id="@+id/iv_active"
@@ -44,9 +47,9 @@
         android:src="@drawable/ic_active_true"
         android:layout_marginTop="@dimen/margin_layout"
         android:layout_marginBottom="@dimen/margin_layout"
-        android:layout_marginEnd="@dimen/margin_layout"
+        android:layout_marginEnd="@dimen/margin_layout_end"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toTopOf="@id/tv_name"
+        app:layout_constraintBottom_toBottomOf="@id/tv_email"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
