--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#607D8B</color>
+    <color name="colorPrimaryDark">#455A64</color>
+    <color name="colorAccent">#FF9800</color>
 
     <color name="backgroundFragment">#DDDDDD</color>
     <color name="backgroundItem">#FFFFFF</color>
-    <color name="nameColor">#232323</color>
-    <color name="emailColor">#686767</color>
+    <color name="nameColor">#212121</color>
+    <color name="emailColor">#757575</color>
 </resources>
