--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,10 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="LoginKeyboard">
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:textSize">34sp</item>
+        <item name="android:foreground">?selectableItemBackgroundBorderless</item>
+    </style>
+
 </resources>
